--- a/cloudman/requirements.yaml
+++ b/cloudman/requirements.yaml
@@ -3,8 +3,8 @@ dependencies:
     repository: https://raw.githubusercontent.com/CloudVE/helm-charts/master
     version: 0.2.0
   - name: keycloak
-    repository: https://raw.githubusercontent.com/CloudVE/helm-charts/master
-    version: 2.0.0
+    repository: https://codecentric.github.io/helm-charts
+    version: 5.1.7
   - name: prometheus
     repository: https://raw.githubusercontent.com/CloudVE/helm-charts/master
     version: 6.2.1
